fix tag colors, contrast home page

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -132,8 +132,8 @@ li {
   -webkit-transform: translateY(-0.25rem);
   -ms-transform: translateY(-0.25rem);
   transform: translateY(-0.25rem);
-  box-shadow: 0px 2px 4px rgba(46, 41, 51, 0.08),
-    0px 5px 10px rgba(71, 63, 79, 0.16);
+  box-shadow: 0px 2px 4px rgba(var(--bs-secondary-rgb), 0.08),
+    0px 5px 10px rgba(var(--bs-secondary-rgb), 0.16);
 }
 
 .post-box {
